--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
-.inicial{
-	background-color: lightgray;
-	padding: 2em 0;
-	text-align: center;
-}
-
-.inicial h1{
-	font-size: 3em;
-	padding-top:0;
-	margin-top: 0;
-}
 
 /* Basic Styles --------------------------------------------------------*/
 html{
@@ -30,4 +19,49 @@ a:hover{
 }
 img{
 	max-width: 100%;
+}
+
+.title_section{
+	padding:0;
+	margin: 0;
+}
+
+.espaciado{
+	padding: 5em 0;
+}
+
+
+/*Header ------------------*/
+.header{
+	background-color: lightgray;
+}
+
+/*Section About  ------------------*/
+.about{
+	background-color: lightblue;
+}
+
+/*Section Features ------------------*/
+.features{
+	background-color: #f9f9f9;
+}
+
+/*Section Pricing ------------------*/
+.pricing{
+	background-color: #ccc;
+}
+
+/*Section Team ------------------*/
+.team{
+	background-color: lightyellow;
+}
+
+/*Section Cta ------------------*/
+.cta{
+	background-color: lightpink;
+}
+
+/*Footer ------------------*/
+.footer{
+	background-color: #333;
 }
