--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body{
 	background-color: #fff;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
+	overflow-x: hidden;
 }
 p{
 	font-weight: lighter;
@@ -302,6 +303,7 @@ video{
 	font-size: 1.1em;
 	line-height: 1.5em;
 	margin-top: 2em;
+	text-align: justify;
 }
 .features__slide__item ul li{
 	margin-top: 1em;
@@ -315,9 +317,10 @@ video{
 	margin-right: 10px;
 }
 
+
 /*Section Pricing ------------------*/
 .pricing{
-	background-color: #ccc;
+	background-color: #F6FAFD;
 }
 
 .pricing__table{
@@ -326,9 +329,87 @@ video{
 	margin-top: 1em;
 }
 
+.pricing h3{
+	color:#333;
+	font-size: 1.5em;
+	font-weight: 700;
+}
+
+.pricing--left p{
+	font-size: 0.9em;
+	margin-top: 0.5em;
+	letter-spacing: 1px;
+}
+
+.pricing--left__item{
+	margin-bottom: 2.5em;
+}
+
+.pricing__table{
+	text-align: center;
+}
+
+.pricing__table h2{
+	border-bottom:2px solid #ca424c;
+	color:#ca424c;
+	font-size: 2em;
+	padding-bottom: 0.5em;
+	margin-left: 15%;
+	width: 70%;
+}
+
+.pricing__table h3{
+	color:#ca424c;
+	font-size: 6em;
+	font-weight: 200;
+}
+
+.pricing__table h3 sub{
+	font-size: 0.2em;
+}
+
+.pricing__table ul{
+	margin-left: -2em;
+	margin-top: 3em;
+	text-align: left;
+}
+
+.pricing__table ul li{
+	font-size: 1.1em;
+	margin-left: 10%;
+	margin-bottom: 1em;
+	width: 80%;
+}
+
+.pricing__table ul li span{
+	color:#ca424c;
+	font-weight: 700;
+	padding-right: 0.7em;
+}
+
+.pricing__table a{
+	width: 90%;
+}
+
+.callus{
+	background-color: #fff;
+	padding: 1.8em 0.2em;
+	text-align: center;
+}
+
+.callus h4{
+	font-size: 2em;
+}
+
+.callus h4 span{
+	color:#ca424c;
+	font-weight: 700;
+}
+
+
 /*Section Team ------------------*/
 .team{
-	background-color: lightyellow;
+	background-color: #fff;
 }
 
 .team__member{
@@ -446,27 +527,36 @@ video{
 	}
 	.support{
 		margin-left: 0!important;
-	}
-	
+	}	
 	.presentation h1 {
 	    font-size: 3.5em;
 	    margin-top: 1.6em;
 	}
-
 	.presentation p {
     	font-size: 1.2em;
     	margin-top: 0em;
 	}
-
 	.my__button {
         font-size: 1em;
     	width: 90%;
 	}
-
 	.download:hover{
 		background-color: transparent;
 	}
-
+	.about .my__button, .features .my__button{
+		margin-left: 5%;
+	}
+	.about .title__section {
+    	margin-top: 0em;
+	}
+	.features__slide__item img{
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.features__slide__item--info{
+		padding: 0em 2em;
+		margin-top: 4em;
+	}
 
 }
 
@@ -476,10 +566,8 @@ video{
 		overflow:hidden;
 	}
 	.navbar {
-    	margin-top: 0em;
-    	
-	}	
-	
+    	margin-top: 0em;    	
+	}		
 	.download{
 		background-color: rgba(255,255,255,0);
 		margin-left: 0em;
@@ -487,42 +575,51 @@ video{
 	}
 	.support{
 		margin-left: 0!important;
-	}
-	
+	}	
 	.presentation h1 {
 	    font-size: 1.5em;
 	    margin-top: 1.6em;
 	}
-
 	.presentation p {
     	font-size: 0.9em;
     	margin-top: 0em;
 	}
-
 	.download:hover{
 		background-color: transparent;
 	}
-
 	.title__section{
 		font-size: 1.5em;
 	}
-
 	.my__button{
 		margin-bottom: 4em;
 		width: 100%;
 	}
-
+	.about .my__button, .features .my__button{
+		margin-left: 0%;
+	}
 	.about .my__button{
 		margin-top: 3em;
 	}
-
 	video {
 	    height: 40vh;
 	}
-
 	.about .title__section {
     	margin-top: 0em;
 	}
+	.subtitle__section {
+	    font-size: 1em;
+	    margin-left: 5%;
+	    text-align: center;
+	    margin-bottom: 3em;
+	    width: 90%;
+	}
+	.slide {
+    	margin-top: 1.5em;
+	}
+	.features__slide__item--info {
+    	padding: 0em 0em;
+	}
+
 
 
 }
