--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,10 @@ video{
 	margin-top: 6.5em;
 }
 
+.dots__navigation{
+	text-align: center;
+}
+
 .dots__navigation a{
     border:1px solid #c4c4c4;
     border-radius: 50%;
