--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,6 @@ Color clases
 /*************************************/
 @import url('https://fonts.googleapis.com/css?family=Didact+Gothic|Rajdhani:400,700');
 
-/*font-family: 'Josefin Slab', serif;
-font-family: 'Didact Gothic', sans-serif;*/
 
 /*************************************/
 /* Basic Styles --------------------------------------------------------*/
@@ -111,7 +109,6 @@ video{
 	position: relative;
 }
 
-
 .boxy::before{
 	background-color: #CA424C;
 	content:" ";
@@ -126,7 +123,6 @@ video{
 .boxy--left{
 	position: relative;
 }
-
 
 .boxy--left::before{
 	background-color: #CA424C;
@@ -170,6 +166,9 @@ video{
 	margin: 1.2em 0;
 	padding: 0.5em 0em;
 	text-align: center;
+	--webkit-transition: all linear 0.5s;
+	-o-transition: all linear 0.5s;
+	transition: all linear 0.5s;
 	width: 40%;
 }
 
@@ -217,20 +216,26 @@ video{
 	background:linear-gradient(rgba(000, 000, 000, 0.7), rgba(0, 0, 0, 0.70)), url('../img/background__header.jpg');
 	background-size: cover;
 	background-position: center center;
-	height: 70vh;
-	position: relative;
+	height: 100vh;
 }
 
 .logo{
-	left: 1em;
 	position: absolute;
-	top: 0.5em;
-	z-index: 100;
+	top: 0;
+	left: 0;
+}
+
+.flexv{
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	height: calc(65.2vh - 70px);
 }
 
 .presentation{
 	color:#fff;
 	text-align: center;
+	align-self: flex-end;
 }
 
 .presentation h1{
@@ -248,6 +253,7 @@ video{
 
 .navbar{
 	margin-top: 1.3em;
+	display: block;
 }
 
 .navbar ul li{
@@ -259,14 +265,14 @@ video{
 	font-size: 1em;
 }
 
-.navbar ul li a:hover{
+.navbar ul li a:hover, .navbar ul li a:focus{
 	background-color: transparent;
 	color:#ca424c;
 	font-weight: 700;
 }
 
 .support{
-	margin-left: 16em!important;
+	margin-left: 20em!important;
 }
 
 .download{
@@ -347,6 +353,9 @@ video{
 	margin-right: 10px;
 }
 
+.features__active{
+	opacity: 0.2;
+}
 
 /*Section Pricing ------------------*/
 .pricing{
@@ -355,7 +364,7 @@ video{
 
 .pricing__table{
 	background-color: #fff;
-	padding: 1em;
+	padding: 1em 0.5em;
 	margin-top: 1em;
 }
 
@@ -366,13 +375,16 @@ video{
 }
 
 .pricing--left p{
-	font-size: 0.9em;
+	font-size: 1.1em;
 	margin-top: 0.5em;
-	letter-spacing: 1px;
 }
 
 .pricing--left__item{
 	margin-bottom: 2.5em;
+}
+
+.pricing--right{
+	padding-left: 4em;
 }
 
 .pricing__table{
@@ -496,7 +508,7 @@ video{
 
 .team__member--active{
 	display: block!important;
-	padding: 0 3em;
+	padding-left: 3em;
 }
 
 .team__member--active__picture img{
@@ -516,7 +528,6 @@ video{
 /*Section Separator ------------------*/
 .separator{
 	background-image: url('../img/background__separator.jpg');
-	background-size: cover;
 	background-position: center center;
 
 }
@@ -669,7 +680,6 @@ video{
     }
 }
 
-
 @media screen and (max-width: 768px){
 	.header{
 		overflow:hidden;
@@ -722,14 +732,16 @@ video{
 
 }
 
-
 @media screen and (max-width: 480px){
 	.header{
 		overflow:hidden;
 	}
 	.navbar {
     	margin-top: 0em;    	
-	}		
+	}	
+	.flexv{
+		height: calc(75vh - 70px);
+	}	
 	.download{
 		background-color: rgba(255,255,255,0);
 		margin-left: 0em;
